2019-01-11  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/hal/include/gpio.h: Removed.
	* sources/hal/src/gpio.c: Removed.
	* sources/hal/include/gpio_exti.h: Was gpio.h
	* sources/hal/include/sleep.h: New file. Functions for going to sleep mode prototypes
	* sources/hal/src/gpio_exti.c: Was gpio.c
	* sources/hal/src/sleep.c: New file. Functions for going to sleep mode
	* sources/bl/src/control_tables.c: 
	* sources/bl/src/main_outputs.c (Control_Outs): added table switching 
	* sources/hal/include/led.h (Led_On): gpio changed
	* sources/main.c (CallBack): preventing for changing state while in process added
	(Button_CallBack): cosmetics
	(main): sleeping added.
	
2019-01-09  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/hal/include/gpio.h: Added callback for exti
	* sources/hal/src/gpio.c (Gpio_Init): Added callback for exti
	* sources/main.c (main): Logic changed
	(Exti_Init): Exti added 

2019-01-07  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/bl/include/main_outputs.h: Prototypes added
	* sources/bl/src/main_outputs.c (Get_State): moved  from led_control 
2019-01-04  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/psg14a_emu.doxyfile: Doxygen added
	* sources/hal/include/led.h: New file.
	* sources/bl/src/led_control.c (Blink_Led): Switched from GPIO to led functions 
	* sources/main.c (main): debug pause changed