@@ -31,6 +31,8 @@ typedef struct
 static const uint8_t B0_Pin = 9;
 static const uint8_t B1_Pin = 10;
 
+//volatile uint8_t interrupt_occured = 0;
+
 
 static const Gpio_Hal_t Gpios[GPIO_TOTAL]=
 {
@@ -59,6 +61,7 @@ void EXTI4_15_IRQHandler(void)
 	{
 		EXTI->PR = (1u << B1_Pin);
 	}
+//	interrupt_occured = 1;
 }
 
 static void Exti_Init(void)
@@ -68,6 +71,7 @@ static void Exti_Init(void)
 //	EXTI->EMR |= (1u << B0_Pin) | (1u << B1_Pin); /* Event mask RM 11.3 */
 	EXTI->RTSR &= ~((1u << B0_Pin) | (1u << B1_Pin)); /* No rising edge */
 	EXTI->FTSR |= (1u << B0_Pin) | (1u << B1_Pin); /* Falling edge */
+	NVIC_EnableIRQ(EXTI4_15_IRQn);
 }
 
 void Exti_Clear_Pending(void)
